// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`golden envelopes complete backup is frozen 1`] = `
Object {
  "data": Object {
    "artifacts": Array [
      Object {
        "artifactId": "AR-1",
        "assessmentId": "ASM-1",
        "complianceRequirement": "",
        "controlId": "CTRL-1",
        "createdDate": "2026-01-01",
        "description": "Quarterly evidence",
        "health": "Healthy",
        "id": "AR-row-1",
        "jiraKey": "AJ-1",
        "lastModified": "2026-01-02",
        "link": "https://drive.internal.example/doc/access-review",
        "linkedEvaluationIds": Array [
          "GV.OC-01 Ex1",
        ],
        "linkedSubcategoryIds": Array [
          "GV.OC-01",
        ],
        "name": "Access review workbook",
        "priority": "Medium",
        "seedSource": "golden-fixture",
        "status": "ACTIVE",
        "type": "Document",
      },
    ],
    "assessments": Array [
      Object {
        "createdDate": "2026-01-01",
        "description": "User-authored assessment",
        "externalTracking": Object {
          "enabled": true,
          "systemName": "LegacyJira",
          "systems": Object {
            "artifacts": "SharePoint",
            "controls": "Hyperproof",
            "findings": "Jira",
          },
        },
        "frameworkFilter": "csf2",
        "id": "ASM-1",
        "jiraKey": "PROJ-1",
        "lastModified": "2026-01-10",
        "name": "Annual CSF assessment",
        "observations": Object {
          "GV.OC-01 Ex1": Object {
            "auditorId": "U-1",
            "externalLinks": Array [
              Object {
                "id": "XL-1",
                "type": "findings",
                "url": "https://jira.internal.example/browse/T-1",
              },
            ],
            "jiraKey": "PROJ-1-OBS",
            "linkedArtifacts": Array [
              "AR-1",
            ],
            "linkedControls": Array [
              "CTRL-1",
            ],
            "linkedFindings": Array [
              "FND-1",
            ],
            "procedureSource": Object {
              "attachedAt": "2026-01-01T00:00:00.000Z",
              "bank": "community",
              "bankId": "GV.OC-01",
              "bankVersion": "fixture-version",
              "modified": true,
              "tailored": true,
            },
            "quarters": Object {
              "Q1": Object {
                "actualScore": 2,
                "examine": true,
                "interview": false,
                "metricId": "cis-m1",
                "observationDate": "2026-01-15",
                "observations": "Quarterly narrative",
                "targetScore": 3,
                "test": true,
                "testingStatus": "Tested",
              },
              "Q2": Object {
                "actualScore": 3,
                "examine": false,
                "interview": false,
                "metricId": "user-m1",
                "observationDate": "",
                "observations": "",
                "targetScore": 3,
                "test": false,
                "testingStatus": "Not Started",
              },
            },
            "remediation": Object {
              "actionPlan": "Close the gap",
              "dueDate": "2026-03-01",
              "ownerId": "U-1",
            },
            "testProcedures": "Tailored for Northwind Insurance: verify CustomerVault9000 recovery.",
          },
          "GV.OC-02 Ex1": Object {
            "actualScore": 1,
            "assessmentMethods": Object {
              "examine": true,
              "interview": false,
              "test": false,
            },
            "auditorId": "",
            "observationDate": "2025-11-01",
            "observations": "Legacy narrative field",
            "quarters": Object {},
            "score": 1,
            "targetScore": 2,
            "testProcedures": "Hand-written procedure, never tailored.",
            "testingStatus": "Planned",
          },
        },
        "scopeIds": Array [
          "GV.OC-01 Ex1",
          "GV.OC-02 Ex1",
        ],
        "scopeType": "requirements",
        "scoringScale": 10,
        "status": "In Progress",
        "users": Array [
          Object {
            "role": "auditor",
            "userId": "U-1",
          },
        ],
        "year": 2026,
      },
      Object {
        "createdDate": "2026-07-01",
        "description": "Pack-owned assessment",
        "externalTracking": Object {
          "enabled": false,
          "systems": Object {
            "artifacts": "",
            "controls": "",
            "findings": "",
          },
        },
        "frameworkFilter": "csf2",
        "id": "ASM-pack-alma",
        "lastModified": "2026-07-01",
        "name": "Alma Security (private pack)",
        "observations": Object {
          "GV.OC-01 Ex1": Object {
            "auditorId": "",
            "linkedArtifacts": Array [],
            "linkedFindings": Array [],
            "quarters": Object {
              "Q2": Object {
                "actualScore": 2,
                "examine": false,
                "interview": false,
                "metricId": "",
                "observationDate": "",
                "observations": "Pack quarter",
                "targetScore": 3,
                "test": false,
                "testingStatus": "",
              },
            },
            "remediation": Object {
              "actionPlan": "",
              "dueDate": "",
              "ownerId": "",
            },
            "testProcedures": "",
          },
        },
        "packImportedAt": "2026-07-01T00:00:00.000Z",
        "packSlug": "alma-security",
        "packVersion": "2026.07",
        "scopeIds": Array [
          "GV.OC-01 Ex1",
        ],
        "scopeType": "requirements",
        "scoringScale": 10,
        "source": "pack",
        "status": "In Progress",
        "users": Array [],
        "year": 2026,
      },
      Object {
        "createdDate": "2026-02-01",
        "description": "",
        "frameworkFilter": "csf2",
        "id": "ASM-3",
        "jiraKey": "PROJ-3",
        "lastModified": "2026-02-01",
        "name": "CSV imported assessment",
        "observations": Object {},
        "scopeIds": Array [
          "GV.OC-01 Ex1",
        ],
        "scopeType": "requirements",
        "scoringScale": 5,
        "status": "Not Started",
      },
    ],
    "controls": Array [
      Object {
        "artifacts": "",
        "assessmentId": null,
        "controlEvaluationBackLink": "WP-1",
        "controlId": "CTRL-1",
        "createdDate": "2026-01-01",
        "externalUrl": "https://jira.internal.example/browse/CTRL-1",
        "findings": "",
        "frameworks": "CSF 2.0",
        "implementationDescription": "Quarterly access review of privileged accounts",
        "lastModified": "2026-01-02",
        "linkedRequirementIds": Array [
          "REQ-1",
        ],
        "name": "Access reviews",
        "ownerId": "U-1",
        "seedSource": "golden-fixture",
        "stakeholderIds": Array [
          "U-1",
        ],
        "status": "Implemented",
        "tests": "Inspect Q1 review evidence",
      },
    ],
    "findings": Array [
      Object {
        "assessmentId": "ASM-1",
        "complianceRequirement": "",
        "controlId": "CTRL-1",
        "createdDate": "2026-01-05",
        "description": "CSV-imported description field",
        "dueDate": "2026-04-01",
        "evaluationId": "GV.OC-01 Ex1",
        "externalUrl": "https://jira.internal.example/browse/FND-1",
        "id": "FND-1",
        "jiraKey": "PROJ-9",
        "lastModified": "2026-01-06",
        "linkedArtifacts": Array [
          "AR-1",
        ],
        "priority": "High",
        "remediationActionPlan": "Automate deprovisioning",
        "remediationOwner": "U-1",
        "rootCause": "No leaver process",
        "seedSource": "golden-fixture",
        "status": "Not Started",
        "summary": "Stale privileged accounts",
      },
      Object {
        "assessmentId": "ASM-pack-alma",
        "complianceRequirement": "",
        "controlId": "PR.AA-01",
        "createdDate": "2026-07-01",
        "dueDate": "",
        "evaluationId": "",
        "externalUrl": "",
        "id": "FND-pack-1",
        "jiraKey": "",
        "lastModified": "2026-07-01",
        "linkedArtifacts": Array [],
        "packImpact": 5,
        "packLikelihood": 4,
        "packRiskId": "R-001",
        "packSlug": "alma-security",
        "packSubcategoryIds": Array [
          "PR.AA-01",
        ],
        "packVersion": "2026.07",
        "priority": "High",
        "remediationActionPlan": "",
        "remediationOwner": "",
        "rootCause": "Finance targeted twice",
        "source": "pack",
        "status": "Not Started",
        "summary": "Wire-transfer BEC",
      },
      Object {
        "assessmentId": "ASM-pack-alma",
        "complianceRequirement": "",
        "controlId": "",
        "createdDate": "2026-07-02",
        "dueDate": "",
        "evaluationId": "",
        "externalUrl": "",
        "id": "FND-2",
        "jiraKey": "",
        "lastModified": "2026-07-02",
        "linkedArtifacts": Array [],
        "priority": "Low",
        "remediationActionPlan": "",
        "remediationOwner": "",
        "rootCause": "",
        "status": "Not Started",
        "summary": "Note against pack assessment",
      },
    ],
    "frameworks": Array [
      Object {
        "color": "#3B82F6",
        "description": "Cybersecurity Framework 2.0",
        "enabled": true,
        "hierarchyLabels": Object {
          "level1": "Function",
          "level2": "Category",
          "level3": "Subcategory",
          "level4": "Implementation Example",
        },
        "id": "csf2",
        "importedDate": null,
        "isDefault": true,
        "name": "NIST CSF 2.0",
        "shortName": "CSF",
        "source": "NIST",
        "sourceUrl": "https://www.nist.gov/cyberframework",
        "version": "2.0",
      },
    ],
    "metrics": Array [
      Object {
        "catalogSlug": "my-catalogue",
        "dataSource": "CMDB",
        "description": "Own metric from own catalogue",
        "direction": "down",
        "formula": "days",
        "frequency": "quarterly",
        "id": "user-m1",
        "importedAt": "2026-01-01T00:00:00.000Z",
        "license": "CC0",
        "name": "Patch latency",
        "notes": "",
        "references": "",
        "source": "csv-import",
        "subcategoryIds": Array [
          "GV.OC-01",
        ],
        "target": "14",
        "type": "KPI",
        "unit": "days",
      },
      Object {
        "catalogSlug": "licensed-catalogue",
        "dataSource": "",
        "description": "Licensed content",
        "direction": "",
        "formula": "",
        "frequency": "",
        "id": "cis-m1",
        "importedAt": "2026-01-01T00:00:00.000Z",
        "license": "CC BY-NC-ND 4.0",
        "name": "Restricted benchmark metric",
        "notes": "",
        "references": "",
        "source": "csv-import",
        "subcategoryIds": Array [
          "GV.OC-01",
        ],
        "target": "",
        "type": "KRI",
        "unit": "%",
      },
      Object {
        "catalogSlug": "foreign",
        "dataSource": "",
        "description": "",
        "direction": "",
        "formula": "",
        "frequency": "",
        "id": "restored-m1",
        "importedAt": "2026-01-02T00:00:00.000Z",
        "license": "",
        "name": "Restored foreign metric",
        "notes": "",
        "references": "",
        "source": "restore",
        "subcategoryIds": Array [],
        "target": "",
        "type": "metric",
        "unit": "",
      },
    ],
    "orgProfile": Object {
      "cloudConsent": false,
      "profile": Object {
        "crownJewels": Array [
          "CustomerVault9000",
        ],
        "industry": "Insurance",
        "infrastructure": Array [
          "AWS",
        ],
        "notes": "",
        "orgName": "Northwind Insurance",
        "securityTools": Array [
          "EDR",
        ],
        "sizeBand": "250–999",
      },
    },
    "requirements": Array [
      Object {
        "artifacts": "",
        "category": "Organizational Context",
        "categoryDescription": "Context category",
        "categoryId": "GV.OC",
        "controlEvaluationBackLink": "",
        "controlOwner": "Dana Deprecated",
        "findings": "",
        "frameworkId": "csf2",
        "function": "GOVERN",
        "functionDescription": "Governance function",
        "id": "REQ-1",
        "implementationDescription": "",
        "implementationExample": "Example text",
        "inScope": true,
        "stakeholders": "Sam Stakeholder",
        "subcategoryDescription": "Mission is understood",
        "subcategoryId": "GV.OC-01",
      },
    ],
    "users": Array [
      Object {
        "email": "pat@example.test",
        "id": "U-1",
        "name": "Pat Example",
        "seedSource": "golden-fixture",
        "title": "Auditor",
      },
    ],
  },
  "dataType": "Complete Assessment Database",
  "exportDate": "<stripped>",
  "formatVersion": 5,
  "metadata": Object {
    "applicationName": "CSF Profile Assessment Tool",
    "assessmentCount": 3,
    "controlCount": 1,
    "exportTimestamp": "<stripped>",
    "findingCount": 3,
    "metricCount": 3,
    "userCount": 1,
  },
  "storeVersions": Object {
    "artifacts": 9,
    "assessments": 15,
    "findings": 6,
    "frameworks": 6,
    "metrics": 1,
    "orgProfile": 1,
    "requirements": 0,
    "users": 3,
  },
}
`;

exports[`golden envelopes default share export is frozen 1`] = `
Object {
  "data": Object {
    "artifacts": Array [
      Object {
        "artifactId": "AR-1",
        "assessmentId": "ASM-1",
        "complianceRequirement": "",
        "controlId": "CTRL-1",
        "createdDate": "2026-01-01",
        "description": "Quarterly evidence",
        "health": "Healthy",
        "id": "AR-row-1",
        "jiraKey": "AJ-1",
        "lastModified": "2026-01-02",
        "link": "",
        "linkedEvaluationIds": Array [
          "GV.OC-01 Ex1",
        ],
        "linkedSubcategoryIds": Array [
          "GV.OC-01",
        ],
        "name": "Access review workbook",
        "priority": "Medium",
        "seedSource": "golden-fixture",
        "status": "ACTIVE",
        "type": "Document",
      },
    ],
    "assessments": Array [
      Object {
        "createdDate": "2026-01-01",
        "description": "User-authored assessment",
        "externalTracking": Object {
          "enabled": true,
          "systems": Object {
            "artifacts": "",
            "controls": "",
            "findings": "",
          },
        },
        "frameworkFilter": "csf2",
        "id": "ASM-1",
        "jiraKey": "PROJ-1",
        "lastModified": "2026-01-10",
        "name": "Annual CSF assessment",
        "observations": Object {
          "GV.OC-01 Ex1": Object {
            "auditorId": "U-1",
            "externalLinks": Array [],
            "jiraKey": "PROJ-1-OBS",
            "linkedArtifacts": Array [
              "AR-1",
            ],
            "linkedControls": Array [
              "CTRL-1",
            ],
            "linkedFindings": Array [
              "FND-1",
            ],
            "procedureSource": Object {
              "attachedAt": "2026-01-01T00:00:00.000Z",
              "bank": "community",
              "bankId": "GV.OC-01",
              "bankVersion": "fixture-version",
              "modified": false,
              "tailored": false,
            },
            "quarters": Object {
              "Q1": Object {
                "actualScore": 2,
                "examine": true,
                "interview": false,
                "observationDate": "2026-01-15",
                "observations": "Quarterly narrative",
                "targetScore": 3,
                "test": true,
                "testingStatus": "Tested",
              },
              "Q2": Object {
                "actualScore": 3,
                "examine": false,
                "interview": false,
                "observationDate": "",
                "observations": "",
                "targetScore": 3,
                "test": false,
                "testingStatus": "Not Started",
              },
            },
            "remediation": Object {
              "actionPlan": "Close the gap",
              "dueDate": "2026-03-01",
              "ownerId": "U-1",
            },
            "testProcedures": "# GV.OC-01: Organizational Mission Test Procedures

**CSF Subcategory:** GV.OC-01 - The organizational mission is understood and informs cybersecurity risk management

---

## Test Procedures

1. **Review mission alignment documentation**
   - Request Alma Security's mission and vision statements
   - Verify cybersecurity strategy references organizational mission
   - Confirm security goals (G1-G8) trace back to business objectives

2. **Interview CISO on mission-risk linkage**
   - Ask how cybersecurity risk decisions connect to Alma's continuous authentication mission
   - Verify awareness of business growth targets (10K customers, $36M ARR trajectory)
   - Confirm security strategy explicitly supports product trust requirements

3. **Examine strategic planning artifacts**
   - Review most recent annual security strategy document
   - Verify mission context is referenced in risk register preamble
   - Check Board reporting materials for mission-risk connection

4. **Cross-reference with non-security leadership**
   - Interview VP Engineering or Product lead on mission-security alignment
   - Confirm shared understanding of how security enables business objectives

## Evidence Requests

- [ ] Mission and vision statements
- [ ] Cybersecurity strategy document referencing organizational mission
- [ ] Board reporting materials showing mission-risk alignment
- [ ] Security goals (G1-G8) documentation with business traceability

## Notes

Alma's position as a continuous authentication SaaS company creates a unique dynamic where the product mission and security mission are tightly coupled. Assessment should verify this linkage is formalized, not just assumed.",
          },
          "GV.OC-02 Ex1": Object {
            "actualScore": 1,
            "assessmentMethods": Object {
              "examine": true,
              "interview": false,
              "test": false,
            },
            "auditorId": "",
            "observationDate": "2025-11-01",
            "observations": "Legacy narrative field",
            "quarters": Object {},
            "score": 1,
            "targetScore": 2,
            "testProcedures": "Hand-written procedure, never tailored.",
            "testingStatus": "Planned",
          },
        },
        "scopeIds": Array [
          "GV.OC-01 Ex1",
          "GV.OC-02 Ex1",
        ],
        "scopeType": "requirements",
        "scoringScale": 10,
        "status": "In Progress",
        "users": Array [
          Object {
            "role": "auditor",
            "userId": "U-1",
          },
        ],
        "year": 2026,
      },
      Object {
        "createdDate": "2026-02-01",
        "description": "",
        "frameworkFilter": "csf2",
        "id": "ASM-3",
        "jiraKey": "PROJ-3",
        "lastModified": "2026-02-01",
        "name": "CSV imported assessment",
        "observations": Object {},
        "scopeIds": Array [
          "GV.OC-01 Ex1",
        ],
        "scopeType": "requirements",
        "scoringScale": 5,
        "status": "Not Started",
      },
    ],
    "controls": Array [
      Object {
        "artifacts": "",
        "assessmentId": null,
        "controlEvaluationBackLink": "WP-1",
        "controlId": "CTRL-1",
        "createdDate": "2026-01-01",
        "externalUrl": "",
        "findings": "",
        "frameworks": "CSF 2.0",
        "implementationDescription": "Quarterly access review of privileged accounts",
        "lastModified": "2026-01-02",
        "linkedRequirementIds": Array [
          "REQ-1",
        ],
        "name": "Access reviews",
        "ownerId": "U-1",
        "seedSource": "golden-fixture",
        "stakeholderIds": Array [
          "U-1",
        ],
        "status": "Implemented",
        "tests": "Inspect Q1 review evidence",
      },
    ],
    "findings": Array [
      Object {
        "assessmentId": "ASM-1",
        "complianceRequirement": "",
        "controlId": "CTRL-1",
        "createdDate": "2026-01-05",
        "description": "CSV-imported description field",
        "dueDate": "2026-04-01",
        "evaluationId": "GV.OC-01 Ex1",
        "externalUrl": "",
        "id": "FND-1",
        "jiraKey": "PROJ-9",
        "lastModified": "2026-01-06",
        "linkedArtifacts": Array [
          "AR-1",
        ],
        "priority": "High",
        "remediationActionPlan": "Automate deprovisioning",
        "remediationOwner": "U-1",
        "rootCause": "No leaver process",
        "seedSource": "golden-fixture",
        "status": "Not Started",
        "summary": "Stale privileged accounts",
      },
    ],
    "frameworks": Array [
      Object {
        "color": "#3B82F6",
        "description": "Cybersecurity Framework 2.0",
        "enabled": true,
        "hierarchyLabels": Object {
          "level1": "Function",
          "level2": "Category",
          "level3": "Subcategory",
          "level4": "Implementation Example",
        },
        "id": "csf2",
        "importedDate": null,
        "isDefault": true,
        "name": "NIST CSF 2.0",
        "shortName": "CSF",
        "source": "NIST",
        "sourceUrl": "https://www.nist.gov/cyberframework",
        "version": "2.0",
      },
    ],
    "metrics": Array [
      Object {
        "catalogSlug": "foreign",
        "dataSource": "",
        "description": "",
        "direction": "",
        "formula": "",
        "frequency": "",
        "id": "restored-m1",
        "importedAt": "2026-01-02T00:00:00.000Z",
        "license": "",
        "name": "Restored foreign metric",
        "notes": "",
        "references": "",
        "source": "restore",
        "subcategoryIds": Array [],
        "target": "",
        "type": "metric",
        "unit": "",
      },
    ],
    "requirements": Array [
      Object {
        "artifacts": "",
        "category": "Organizational Context",
        "categoryDescription": "Context category",
        "categoryId": "GV.OC",
        "controlEvaluationBackLink": "",
        "controlOwner": "Dana Deprecated",
        "findings": "",
        "frameworkId": "csf2",
        "function": "GOVERN",
        "functionDescription": "Governance function",
        "id": "REQ-1",
        "implementationDescription": "",
        "implementationExample": "Example text",
        "inScope": true,
        "stakeholders": "Sam Stakeholder",
        "subcategoryDescription": "Mission is understood",
        "subcategoryId": "GV.OC-01",
      },
    ],
  },
  "dataType": "Shareable Assessment Database (private pack data excluded)",
  "exportDate": "<stripped>",
  "formatVersion": 5,
  "metadata": Object {
    "applicationName": "CSF Profile Assessment Tool",
    "assessmentCount": 2,
    "controlCount": 1,
    "exportTimestamp": "<stripped>",
    "findingCount": 1,
    "metricCount": 1,
    "userCount": 0,
  },
  "storeVersions": Object {
    "artifacts": 9,
    "assessments": 15,
    "findings": 6,
    "frameworks": 6,
    "metrics": 1,
    "orgProfile": 1,
    "requirements": 0,
    "users": 3,
  },
}
`;

exports[`golden envelopes include-private share export is frozen 1`] = `
Object {
  "data": Object {
    "artifacts": Array [
      Object {
        "artifactId": "AR-1",
        "assessmentId": "ASM-1",
        "complianceRequirement": "",
        "controlId": "CTRL-1",
        "createdDate": "2026-01-01",
        "description": "Quarterly evidence",
        "health": "Healthy",
        "id": "AR-row-1",
        "jiraKey": "AJ-1",
        "lastModified": "2026-01-02",
        "link": "https://drive.internal.example/doc/access-review",
        "linkedEvaluationIds": Array [
          "GV.OC-01 Ex1",
        ],
        "linkedSubcategoryIds": Array [
          "GV.OC-01",
        ],
        "name": "Access review workbook",
        "priority": "Medium",
        "seedSource": "golden-fixture",
        "status": "ACTIVE",
        "type": "Document",
      },
    ],
    "assessments": Array [
      Object {
        "createdDate": "2026-01-01",
        "description": "User-authored assessment",
        "externalTracking": Object {
          "enabled": true,
          "systemName": "LegacyJira",
          "systems": Object {
            "artifacts": "SharePoint",
            "controls": "Hyperproof",
            "findings": "Jira",
          },
        },
        "frameworkFilter": "csf2",
        "id": "ASM-1",
        "jiraKey": "PROJ-1",
        "lastModified": "2026-01-10",
        "name": "Annual CSF assessment",
        "observations": Object {
          "GV.OC-01 Ex1": Object {
            "auditorId": "U-1",
            "externalLinks": Array [
              Object {
                "id": "XL-1",
                "type": "findings",
                "url": "https://jira.internal.example/browse/T-1",
              },
            ],
            "jiraKey": "PROJ-1-OBS",
            "linkedArtifacts": Array [
              "AR-1",
            ],
            "linkedControls": Array [
              "CTRL-1",
            ],
            "linkedFindings": Array [
              "FND-1",
            ],
            "procedureSource": Object {
              "attachedAt": "2026-01-01T00:00:00.000Z",
              "bank": "community",
              "bankId": "GV.OC-01",
              "bankVersion": "fixture-version",
              "modified": true,
              "tailored": true,
            },
            "quarters": Object {
              "Q1": Object {
                "actualScore": 2,
                "examine": true,
                "interview": false,
                "observationDate": "2026-01-15",
                "observations": "Quarterly narrative",
                "targetScore": 3,
                "test": true,
                "testingStatus": "Tested",
              },
              "Q2": Object {
                "actualScore": 3,
                "examine": false,
                "interview": false,
                "metricId": "user-m1",
                "observationDate": "",
                "observations": "",
                "targetScore": 3,
                "test": false,
                "testingStatus": "Not Started",
              },
            },
            "remediation": Object {
              "actionPlan": "Close the gap",
              "dueDate": "2026-03-01",
              "ownerId": "U-1",
            },
            "testProcedures": "Tailored for Northwind Insurance: verify CustomerVault9000 recovery.",
          },
          "GV.OC-02 Ex1": Object {
            "actualScore": 1,
            "assessmentMethods": Object {
              "examine": true,
              "interview": false,
              "test": false,
            },
            "auditorId": "",
            "observationDate": "2025-11-01",
            "observations": "Legacy narrative field",
            "quarters": Object {},
            "score": 1,
            "targetScore": 2,
            "testProcedures": "Hand-written procedure, never tailored.",
            "testingStatus": "Planned",
          },
        },
        "scopeIds": Array [
          "GV.OC-01 Ex1",
          "GV.OC-02 Ex1",
        ],
        "scopeType": "requirements",
        "scoringScale": 10,
        "status": "In Progress",
        "users": Array [
          Object {
            "role": "auditor",
            "userId": "U-1",
          },
        ],
        "year": 2026,
      },
      Object {
        "createdDate": "2026-07-01",
        "description": "Pack-owned assessment",
        "externalTracking": Object {
          "enabled": false,
          "systems": Object {
            "artifacts": "",
            "controls": "",
            "findings": "",
          },
        },
        "frameworkFilter": "csf2",
        "id": "ASM-pack-alma",
        "lastModified": "2026-07-01",
        "name": "Alma Security (private pack)",
        "observations": Object {
          "GV.OC-01 Ex1": Object {
            "auditorId": "",
            "linkedArtifacts": Array [],
            "linkedFindings": Array [],
            "quarters": Object {
              "Q2": Object {
                "actualScore": 2,
                "examine": false,
                "interview": false,
                "metricId": "",
                "observationDate": "",
                "observations": "Pack quarter",
                "targetScore": 3,
                "test": false,
                "testingStatus": "",
              },
            },
            "remediation": Object {
              "actionPlan": "",
              "dueDate": "",
              "ownerId": "",
            },
            "testProcedures": "",
          },
        },
        "packImportedAt": "2026-07-01T00:00:00.000Z",
        "packSlug": "alma-security",
        "packVersion": "2026.07",
        "scopeIds": Array [
          "GV.OC-01 Ex1",
        ],
        "scopeType": "requirements",
        "scoringScale": 10,
        "source": "pack",
        "status": "In Progress",
        "users": Array [],
        "year": 2026,
      },
      Object {
        "createdDate": "2026-02-01",
        "description": "",
        "frameworkFilter": "csf2",
        "id": "ASM-3",
        "jiraKey": "PROJ-3",
        "lastModified": "2026-02-01",
        "name": "CSV imported assessment",
        "observations": Object {},
        "scopeIds": Array [
          "GV.OC-01 Ex1",
        ],
        "scopeType": "requirements",
        "scoringScale": 5,
        "status": "Not Started",
      },
    ],
    "controls": Array [
      Object {
        "artifacts": "",
        "assessmentId": null,
        "controlEvaluationBackLink": "WP-1",
        "controlId": "CTRL-1",
        "createdDate": "2026-01-01",
        "externalUrl": "https://jira.internal.example/browse/CTRL-1",
        "findings": "",
        "frameworks": "CSF 2.0",
        "implementationDescription": "Quarterly access review of privileged accounts",
        "lastModified": "2026-01-02",
        "linkedRequirementIds": Array [
          "REQ-1",
        ],
        "name": "Access reviews",
        "ownerId": "U-1",
        "seedSource": "golden-fixture",
        "stakeholderIds": Array [
          "U-1",
        ],
        "status": "Implemented",
        "tests": "Inspect Q1 review evidence",
      },
    ],
    "findings": Array [
      Object {
        "assessmentId": "ASM-1",
        "complianceRequirement": "",
        "controlId": "CTRL-1",
        "createdDate": "2026-01-05",
        "description": "CSV-imported description field",
        "dueDate": "2026-04-01",
        "evaluationId": "GV.OC-01 Ex1",
        "externalUrl": "https://jira.internal.example/browse/FND-1",
        "id": "FND-1",
        "jiraKey": "PROJ-9",
        "lastModified": "2026-01-06",
        "linkedArtifacts": Array [
          "AR-1",
        ],
        "priority": "High",
        "remediationActionPlan": "Automate deprovisioning",
        "remediationOwner": "U-1",
        "rootCause": "No leaver process",
        "seedSource": "golden-fixture",
        "status": "Not Started",
        "summary": "Stale privileged accounts",
      },
      Object {
        "assessmentId": "ASM-pack-alma",
        "complianceRequirement": "",
        "controlId": "PR.AA-01",
        "createdDate": "2026-07-01",
        "dueDate": "",
        "evaluationId": "",
        "externalUrl": "",
        "id": "FND-pack-1",
        "jiraKey": "",
        "lastModified": "2026-07-01",
        "linkedArtifacts": Array [],
        "packImpact": 5,
        "packLikelihood": 4,
        "packRiskId": "R-001",
        "packSlug": "alma-security",
        "packSubcategoryIds": Array [
          "PR.AA-01",
        ],
        "packVersion": "2026.07",
        "priority": "High",
        "remediationActionPlan": "",
        "remediationOwner": "",
        "rootCause": "Finance targeted twice",
        "source": "pack",
        "status": "Not Started",
        "summary": "Wire-transfer BEC",
      },
      Object {
        "assessmentId": "ASM-pack-alma",
        "complianceRequirement": "",
        "controlId": "",
        "createdDate": "2026-07-02",
        "dueDate": "",
        "evaluationId": "",
        "externalUrl": "",
        "id": "FND-2",
        "jiraKey": "",
        "lastModified": "2026-07-02",
        "linkedArtifacts": Array [],
        "priority": "Low",
        "remediationActionPlan": "",
        "remediationOwner": "",
        "rootCause": "",
        "status": "Not Started",
        "summary": "Note against pack assessment",
      },
    ],
    "frameworks": Array [
      Object {
        "color": "#3B82F6",
        "description": "Cybersecurity Framework 2.0",
        "enabled": true,
        "hierarchyLabels": Object {
          "level1": "Function",
          "level2": "Category",
          "level3": "Subcategory",
          "level4": "Implementation Example",
        },
        "id": "csf2",
        "importedDate": null,
        "isDefault": true,
        "name": "NIST CSF 2.0",
        "shortName": "CSF",
        "source": "NIST",
        "sourceUrl": "https://www.nist.gov/cyberframework",
        "version": "2.0",
      },
    ],
    "metrics": Array [
      Object {
        "catalogSlug": "my-catalogue",
        "dataSource": "CMDB",
        "description": "Own metric from own catalogue",
        "direction": "down",
        "formula": "days",
        "frequency": "quarterly",
        "id": "user-m1",
        "importedAt": "2026-01-01T00:00:00.000Z",
        "license": "CC0",
        "name": "Patch latency",
        "notes": "",
        "references": "",
        "source": "csv-import",
        "subcategoryIds": Array [
          "GV.OC-01",
        ],
        "target": "14",
        "type": "KPI",
        "unit": "days",
      },
      Object {
        "catalogSlug": "foreign",
        "dataSource": "",
        "description": "",
        "direction": "",
        "formula": "",
        "frequency": "",
        "id": "restored-m1",
        "importedAt": "2026-01-02T00:00:00.000Z",
        "license": "",
        "name": "Restored foreign metric",
        "notes": "",
        "references": "",
        "source": "restore",
        "subcategoryIds": Array [],
        "target": "",
        "type": "metric",
        "unit": "",
      },
    ],
    "requirements": Array [
      Object {
        "artifacts": "",
        "category": "Organizational Context",
        "categoryDescription": "Context category",
        "categoryId": "GV.OC",
        "controlEvaluationBackLink": "",
        "controlOwner": "Dana Deprecated",
        "findings": "",
        "frameworkId": "csf2",
        "function": "GOVERN",
        "functionDescription": "Governance function",
        "id": "REQ-1",
        "implementationDescription": "",
        "implementationExample": "Example text",
        "inScope": true,
        "stakeholders": "Sam Stakeholder",
        "subcategoryDescription": "Mission is understood",
        "subcategoryId": "GV.OC-01",
      },
    ],
    "users": Array [
      Object {
        "email": "pat@example.test",
        "id": "U-1",
        "name": "Pat Example",
        "seedSource": "golden-fixture",
        "title": "Auditor",
      },
    ],
  },
  "dataType": "Complete Assessment Database (private pack data INCLUDED; restricted-license metrics still excluded)",
  "exportDate": "<stripped>",
  "formatVersion": 5,
  "metadata": Object {
    "applicationName": "CSF Profile Assessment Tool",
    "assessmentCount": 3,
    "controlCount": 1,
    "exportTimestamp": "<stripped>",
    "findingCount": 3,
    "metricCount": 2,
    "userCount": 1,
  },
  "storeVersions": Object {
    "artifacts": 9,
    "assessments": 15,
    "findings": 6,
    "frameworks": 6,
    "metrics": 1,
    "orgProfile": 1,
    "requirements": 0,
    "users": 3,
  },
}
`;
